--- a/Quality/Quality/Views/PublicWondow/AreaCodeList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/AreaCodeList.cshtml
@@ -39,7 +39,7 @@
                 <tr>
                     <th> </th>
                     <th>AreaCode</th>
-                    @*<th>ToAddress</th>*@
+                    <th>Description</th>
                     @*<th>CcAddress</th>*@
                 </tr>
             </thead>
@@ -50,6 +50,9 @@
                         <td><input type="checkbox" name="name" value="" GroupName="@item.AreaCode" /></td>
                         <td>
                             @item.AreaCode
+                        </td>
+                        <td>
+                            @item.Description
                         </td>
                     </tr>
                 }
@@ -65,13 +68,14 @@
 
     $(function () {
         var table = $('#MyTable').DataTable({
-            "filter": false,
+            "filter": true,
             "paging": false,
             "order": false,
             "info": false,
             columns: [
                 { target: 0 },
                 { target: 1 },
+                { target: 2 },
             ]
         });
 
