--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -184,6 +184,11 @@
                         <td>Rejected</td>
                         <td class="valueColor" style="padding-left:10px;">@(Model.FinalInspection.AcceptQty+1)</td>
                     </tr>
+                    <tr>
+                        <td>Re-Inspection</td>
+                        @{string strReInspection = Model.FinalInspection.ReInspection ? "Y" : "N";}
+                        <td class="valueColor">@strReInspection</td>
+                    </tr>
                 </table>
             </div>
         </div>
