--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
@@ -153,6 +153,7 @@
                                 <th>Article</th>
                                 <th>Inspection <br>Times</th>
                                 <th>Inspection Stage</th>
+                                <th>Re-Inspection</th>
                                 <th>Is Transfer To PMS</th>
                                 <th>Is Transfer To Pivot88</th>
                                 <th>Junk</th>
@@ -226,6 +227,9 @@
 
                                     <td>
                                         @Html.DisplayFor(modelItem => item.InspectionStage)
+                                    </td>
+                                    <td>
+                                        @Html.CheckBoxFor(modelItem => item.ReInspection, new { @disabled = true})
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.IsTransferToPMS)
